# bc-depo-rust

./: CLA.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
src/: api.rs  db.rs  db_depo.rs  depo.rs  depo_impl.rs  depo_struct.rs  function.rs  lib.rs  local_depo.rs  local_store.rs  local_store_mem.rs  logging.rs  main.rs  mem_depo.rs  mem_local_depo.rs  mem_store.rs  question.rs  receipt.rs  record.rs  recovery_continuation.rs  server.rs  store.rs  user.rs
src/modules/: mod.rs
src/modules/depo/: Cargo.toml  README.md  db_depo.rs  depo.rs  depo_impl.rs  function.rs  mem_depo.rs  mod.rs
src/modules/torgap/: mod.rs  torgap.rs
src/request/: delete_account.rs  delete_shares.rs  depo_request.rs  get_recovery.rs  get_shares.rs  mod.rs  store_share.rs  update_fallback.rs  update_key.rs  update_recovery.rs
tests/: integration.rs  request_test.rs  server_test.rs  store_share.rs
