[package]
name = "depo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dcbor = { version = "0.10.0", features = ["multithreaded"] }
dcbor = { path = "../dcbor", features = ["multithreaded"] }

# bc-ur = "0.2.1"
bc-ur = { path = "../bc-ur" }

# bc-envelope = { version = "0.11.0", features = ["multithreaded"] }
bc-envelope = { path = "../bc-envelope", features = ["multithreaded"] }

# bc-components = "0.6.0"
bc-components = { path = "../bc-components" }

depo-api = { path = "../depo-api", features = ["multithreaded"] }

warp = "0.3"
tokio = { version = "1", features = ["full"] }
mysql_async = "0.32"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4.3"
async-trait = "0.1.74"
bytes = "1.5.0"
url = "2.4.1"

[dev-dependencies]
indoc = "2.0.4"
hex-literal = "0.4.1"
reqwest = "0.11.22"
