[package]
name = "bc-server"
version = "0.0.1"
edition = "2021"
description = "Lightweight re-useable server BlockchainCommons' tools and services."
authors = ["Blockchain Commons"]
keywords = ["cryptocurrency", "security", "key-management", "recovery", "server"]
repository = "https://github.com/BlockchainCommons/bc-depo-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
categories = ["cryptography", "database", "web-programming::http-server"]
# documentation = "https://docs.rs/depo"

[dependencies]
# bc-server-modules = { path = "modules", version = "*" }

dcbor = { version = "0.11", features = ["multithreaded"] }
# dcbor = { path = "../dcbor", features = ["multithreaded"] }

bc-ur = "0.2"
# bc-ur = { path = "../bc-ur" }

bc-envelope = { version = "0.12", features = ["multithreaded"] }
# bc-envelope = { path = "../bc-envelope", features = ["multithreaded"] }

bc-components = "0.7"
# bc-components = { path = "../bc-components" }

depo-api = { version = "0.1", features = ["multithreaded"] }
# depo-api = { path = "../depo-api", features = ["multithreaded"] }

warp = "0.3"
tokio = { version = "1", features = ["full"] }
mysql_async = "0.32"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4.3"
async-trait = "0.1.74"
bytes = "1.5.0"
url = "2.4.1"
log = "0.4.20"
env_logger = "0.10.1"
nu-ansi-term = "0.49.0"
# Torgap
# @todo Make modules into features.
torgap-demo = { git = "https://github.com/BlockchainCommons/torgap-demo", version = "0.1.0" }
torgap-sig-cli-rust = { git = "https://github.com/BlockchainCommons/torgap-sig-cli-rust", version = "0.5.6" }

[dev-dependencies]
indoc = "2.0.4"
hex-literal = "0.4.1"
reqwest = "0.11.22"
